--- a/src/app/features/notes/components/note-editor/note-editor.component.scss
+++ b/src/app/features/notes/components/note-editor/note-editor.component.scss
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     padding: 1.5rem 2rem;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+    box-shadow: rgba(50, 50, 93, 0.25) 0 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   }
 
   .editor-title{
