--- a/src/app/features/notes/notes-shell/notes-shell/notes-shell.component.scss
+++ b/src/app/features/notes/notes-shell/notes-shell/notes-shell.component.scss
@@ -20,7 +20,7 @@
       align-items: center;
       justify-content: space-between;
       padding: 30px 10px 5px 10px;
-      box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+      box-shadow: rgba(50, 50, 93, 0.25) 0 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
     }
   }
 
