--- a/src/app/features/notes/components/note-item/note-item.component.scss
+++ b/src/app/features/notes/components/note-item/note-item.component.scss
@@ -49,6 +49,14 @@ $delete-button-color: #dc3545;
     line-height: 1.4;
   }
 
+  .time-stamp{
+    position: absolute;
+    display: flex;
+    bottom: 5px;
+    right: 10px;
+    font-size: 11px;;
+  }
+
   .delete-button{
     position: absolute;
     top: 0.5rem;
